--- a/public/index.html
+++ b/public/index.html
@@ -32,9 +32,8 @@
       /* Button style */
       .music-button {
         position: fixed;
-        right: 10px;
-        top: 50%;
-        transform: translateY(-50%);
+        left: 20px; /* Move to the left side */
+        bottom: 20px; /* Distance from the bottom edge */
         background-color: #ff5500;
         color: white;
         border: none;
@@ -42,7 +41,7 @@
         font-size: 16px;
         cursor: pointer;
         border-radius: 5px;
-        z-index: 10;
+        z-index: 10; /* Ensure the button is above other elements */
       }
 
       /* Button hover effect */
@@ -58,14 +57,14 @@
     <div id="root"></div>
 
     <!-- Embed SoundCloud Player, hidden initially -->
-    <iframe 
+    <iframe
       id="soundcloud-player"
       class="hidden-soundcloud"
-      width="100%" 
-      height="300" 
-      scrolling="no" 
-      frameborder="no" 
-      allow="autoplay" 
+      width="100%"
+      height="300"
+      scrolling="no"
+      frameborder="no"
+      allow="autoplay"
       src="https://w.soundcloud.com/player/?url=https%3A//api.soundcloud.com/playlists/1971221216&color=%23ff5500&auto_play=true&hide_related=false&show_comments=true&show_user=true&show_reposts=false&show_teaser=true&visual=true">
     </iframe>
 
