--- a/public/index.html
+++ b/public/index.html
@@ -30,23 +30,39 @@
       }
 
       /* Button style */
-      .music-button {
+      .music-button, .pause-button {
         position: fixed;
-        left: 20px; /* Move to the left side */
-        bottom: 20px; /* Distance from the bottom edge */
-        background-color: #ff5500;
-        color: white;
-        border: none;
+        bottom: 20px;
         padding: 10px 20px;
         font-size: 16px;
         cursor: pointer;
         border-radius: 5px;
-        z-index: 10; /* Ensure the button is above other elements */
+        z-index: 10;
+      }
+
+      /* Play button style */
+      .music-button {
+        left: 20px;
+        background-color: #ff5500;
+        color: white;
+        border: none;
+      }
+
+      /* Pause button style */
+      .pause-button {
+        left: 150px; /* Position next to the play button */
+        background-color: #ff3333;
+        color: white;
+        border: none;
       }
 
       /* Button hover effect */
       .music-button:hover {
         background-color: #ff7733;
+      }
+
+      .pause-button:hover {
+        background-color: #ff5555;
       }
     </style>
   </head>
@@ -68,8 +84,11 @@
       src="https://w.soundcloud.com/player/?url=https%3A//api.soundcloud.com/playlists/1971221216&color=%23ff5500&auto_play=true&hide_related=false&show_comments=true&show_user=true&show_reposts=false&show_teaser=true&visual=true">
     </iframe>
 
-    <!-- Button to play music -->
+    <!-- Play Button to play music -->
     <button class="music-button" onclick="playMusic()">Play Music</button>
+
+    <!-- Pause Button to pause music -->
+    <button class="pause-button" onclick="pauseMusic()">Pause Music</button>
 
     <script>
       // Function to play the music when the button is clicked
@@ -79,6 +98,13 @@
         const iframeSrc = soundcloudIframe.src;
         soundcloudIframe.src = ''; // Reset the iframe
         soundcloudIframe.src = iframeSrc; // Set the src again to trigger autoplay
+      }
+
+      // Function to pause the music when the pause button is clicked
+      function pauseMusic() {
+        const soundcloudIframe = document.getElementById('soundcloud-player');
+        // Reset the iframe src to stop playback
+        soundcloudIframe.src = '';
       }
     </script>
   </body>
